Fix whitespace on iPhone 5

--- a/src/styles/_App.scss
+++ b/src/styles/_App.scss
@@ -1,5 +1,6 @@
 .div-app {
   background-color: #f0fcff;
+  overflow: hidden;
 }
 
 .App {
